my-app-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-flask-service
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 32001
      targetPort: 3030
