my-app-base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-flask-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: py-flask.info  # Hostname for your application
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: py-flask-service
              port: 
                number: 3030
